<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>everybot_sensor_manager</name>
  <version>0.0.0</version>
  <description>To convert sensor data into a targer_frame PointCloud</description>
  <maintainer email="hyjoe@everybot.net">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>everybot_custom_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
