<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>everybot_slam</name>
  <version>0.1.0</version>
  <description>
    RTAB-Map based hybrid 3D SLAM (2D LiDAR + RGB-D) for everybot.
    Mapping / localization launch and parameters.
  </description>
  <maintainer email="chy97sky@gmail.com">hyjoe</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- RK3588 side -->
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <!-- Jetson side (rgbd_sync) - 같은 패키지를 Jetson 워크스페이스에도 배포 -->
  <exec_depend>rtabmap_sync</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
