cmake_minimum_required(VERSION 3.5)
project(udp_interface)

set(CMAKE_BUILD_TYPE Release) #set(CMAKE_BUILD_TYPE Debug) 

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(serial REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(everybot_custom_msgs REQUIRED)
find_package(nav_msgs REQUIRED)

# Add linker flags for memory protections
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-z,relro,-z,now")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-z,relro,-z,now")

#add_library(state_manager_lib OBJECT ${SRC_FILES})

# Include directories
include_directories(
  include  # Include your project's header directory
  ${catkin_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/udp_interface  # Include path for libNetwork.h
)

find_path(LIBNETWORK_INCLUDE_DIR
  NAMES libNetwork.h
  PATHS ${CMAKE_CURRENT_SOURCE_DIR}/include/udp_interface
  NO_DEFAULT_PATH
)

# Find libNetwork.so (specify the path if necessary)
find_library(LIBNETWORK_LIBRARY 
  NAMES Network libNetwork 
  PATHS ${CMAKE_CURRENT_SOURCE_DIR}/include/udp_interface
  NO_DEFAULT_PATH
)

if(NOT LIBNETWORK_INCLUDE_DIR OR NOT LIBNETWORK_LIBRARY)
  message(FATAL_ERROR "libNetwork headers or library not found. Check the paths.")
endif()

add_executable(udp_communication src/main.cpp src/udp_communication.cpp)

ament_target_dependencies(udp_communication
  rclcpp
  tf2_geometry_msgs
  std_msgs
  sensor_msgs
  geometry_msgs
  serial
  everybot_custom_msgs
  nav_msgs
)

target_link_libraries(udp_communication ${LIBNETWORK_LIBRARY})

# Install targets (adjust DESTINATION paths if necessary)
install(TARGETS
  udp_communication
    DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/${PROJECT_NAME}/
  DESTINATION include/${PROJECT_NAME})

install(DIRECTORY launch 
  DESTINATION share/${PROJECT_NAME})

install(DIRECTORY config
  DESTINATION share/${PROJECT_NAME}/
)
ament_export_dependencies(rosidl_default_runtime)

ament_package()
